demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flasktest
  namespace: pythongirona
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    name: flasktestbackend
