demo/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flasktest-ingress
  namespace: pythongirona
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
    - secretName: hello-env-pythongirona-cat-tls
  rules:
  - host: hello.env.pythongirona.cat
    http:
      paths:
        - path: /
          backend:
            serviceName: flasktest
            servicePort: 80
